add readme, tests, docker fix endpoints
